--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.apiviz</groupId>
   <artifactId>apiviz</artifactId>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0.GA-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>APIviz</name>
