--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,21 @@
   </distributionManagement>
 
   <dependencies>
+    <!-- SUN Standard Doclet -->
     <dependency>
       <groupId>com.sun.jdk</groupId>
       <artifactId>jdk-tools</artifactId>
       <version>1.5</version>
       <scope>system</scope>
       <systemPath>${java.home}/../lib/tools.jar</systemPath>
+    </dependency>
+    
+    <!-- JDepend for package dependency analysis -->
+    <dependency>
+      <groupId>jdepend</groupId>
+      <artifactId>jdepend</artifactId>
+      <version>2.9.1</version>
+      <scope>compile</scope>
     </dependency>
 
     <!-- Testing -->
@@ -123,6 +132,35 @@
           <linkJavadoc>false</linkJavadoc>
         </configuration>
       </plugin>      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <artifactSet>
+            <excludes>
+              <exclude>junit:junit</exclude>
+              <exclude>com.sun.jdk</exclude>
+            </excludes>
+          </artifactSet>
+          <relocations>
+            <relocation>
+              <pattern>jdepend</pattern>
+              <shadedPattern>org.jboss.apiviz.shaded.jdepend</shadedPattern>
+            </relocation>
+          </relocations>
+          <transformers>
+            <transformer implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer"/>
+          </transformers>
+        </configuration>
+      </plugin>
       <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
         <executions>
