--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.apiviz</groupId>
   <artifactId>apiviz</artifactId>
-  <version>1.2.0.GA-SNAPSHOT</version>
+  <version>1.2.0.GA</version>
   <packaging>jar</packaging>
 
   <name>APIviz</name>
@@ -29,8 +29,8 @@
   </licenses>
 
   <scm>
-    <connection>scm:svn:http://anonsvn.jboss.org/repos/apiviz/trunk</connection>
-    <developerConnection>scm:svn:https://svn.jboss.org/repos/apiviz/trunk</developerConnection>
+    <connection>scm:svn:http://anonsvn.jboss.org/repos/apiviz/tags/apiviz-1.2.0.GA</connection>
+    <developerConnection>scm:svn:https://svn.jboss.org/repos/apiviz/tags/apiviz-1.2.0.GA</developerConnection>
   </scm>
 
   <distributionManagement>
@@ -208,7 +208,7 @@
             </excludes>
           </artifactSet>
           <transformers>
-            <transformer implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer"/>
+            <transformer implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer" />
           </transformers>
         </configuration>
       </plugin>
