No need to attach the assembled archives

--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,7 @@
           <descriptors>
             <descriptor>${basedir}/src/assembly/default.xml</descriptor>
           </descriptors>
+          <attach>false</attach>
           <appendAssemblyId>true</appendAssemblyId>
           <tarLongFileMode>gnu</tarLongFileMode>
         </configuration>
