--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,10 @@
         </configuration>
       </plugin>      
       <plugin>
+          <!-- TODO: find out if there is a better way to do this.  This method
+          depends on ant-contrib which hasn't been updated in a very long time.  -->
         <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.2</version><!-- 1.3+ is not compatible with ant-contrib -->
         <executions>
           <execution>
             <id>add-license</id>
