--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
                     <target>1.5</target>
                     <debug>true</debug>
                     <optimize>true</optimize>
-                    <showDeprecations>true</showDeprecations>
+                    <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
             <plugin>
