--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.apiviz</groupId>
   <artifactId>apiviz</artifactId>
-  <version>1.3.1.GA-SNAPSHOT</version>
+  <version>1.4.0.ALPHA1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
     <name>APIviz</name>
