--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
   <version>1.3.2.GA-SNAPSHOT</version>
   <packaging>jar</packaging>
 
+  <parent>
+    <groupId>org.jboss</groupId>
+    <artifactId>jboss-parent</artifactId>
+    <version>9</version>
+  </parent>
+
     <name>APIviz</name>
     <description>
     APIviz is a JavaDoc doclet which extends the Java standard doclet.
