--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.apiviz</groupId>
   <artifactId>apiviz</artifactId>
-  <version>1.3.2.GA</version>
+  <version>1.3.3.GA-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <parent>
@@ -35,9 +35,10 @@
     </licenses>
 
     <scm>
-        <connection>scm:svn:http://anonsvn.jboss.org/repos/apiviz/tags/apiviz-1.3.2.GA</connection>
-        <developerConnection>scm:svn:https://svn.jboss.org/repos/apiviz/tags/apiviz-1.3.2.GA</developerConnection>
-    </scm>
+        <connection>scm:svn:http://anonsvn.jboss.org/repos/apiviz/trunk</connection>
+        <developerConnection>scm:svn:https://svn.jboss.org/repos/apiviz/trunk</developerConnection>
+      <url>http://github.com/jboss/jboss-parent-pom/apiviz</url>
+  </scm>
 
     <properties>
         <jdepend-version>2.9.1</jdepend-version>
