--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
     </licenses>
 
     <scm>
-        <connection>scm:svn:http://anonsvn.jboss.org/repos/apiviz/trunk</connection>
-        <developerConnection>scm:svn:https://svn.jboss.org/repos/apiviz/trunk</developerConnection>
+        <connection>scm:svn:http://anonsvn.jboss.org/repos/apiviz/branches/1.3</connection>
+        <developerConnection>scm:svn:https://svn.jboss.org/repos/apiviz/branches/1.3</developerConnection>
     </scm>
 
     <properties>
