--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
   </scm>
 
   <properties>
-    <jdepend-version>2.9.1</jdepend-version>
+    <jdepend-version>2.9.5</jdepend-version>
   </properties>
 
   <dependencies>
@@ -54,7 +54,7 @@
     </dependency>
     <!-- JDepend for package dependency analysis -->
     <dependency>
-      <groupId>jdepend</groupId>
+      <groupId>guru.nidi</groupId>
       <artifactId>jdepend</artifactId>
       <version>${jdepend-version}</version>
       <scope>compile</scope>
