--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.jboss</groupId>
-    <artifactId>jboss-parent</artifactId>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
     <version>9</version>
   </parent>
 
