--- a/pom.xml
+++ b/pom.xml
@@ -77,21 +77,6 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <aggregate>true</aggregate>
-          <breakiterator>true</breakiterator>
-          <charset>UTF-8</charset>
-          <docencoding>UTF-8</docencoding>
-          <encoding>UTF-8</encoding>
-          <links>
-            <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
-          </links>
-          <locale>en_US</locale>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jxr-plugin</artifactId>
         <configuration>
           <inputEncoding>UTF-8</inputEncoding>
@@ -105,49 +90,26 @@
   <reporting>
     <plugins>
       <plugin>
-        <!-- reuse our just compiled version to run javadoc against our tests.  Cheeky huh? -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.5</version>
+        <version>2.10.3</version>
         <configuration>
           <doclet>org.jboss.apiviz.APIviz</doclet>
           <docletArtifact>
-            <groupId>org.jboss.apiviz</groupId>
-            <artifactId>apiviz</artifactId>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>${project.artifactId}</artifactId>
             <version>${project.version}</version>
           </docletArtifact>
           <useStandardDocletOptions>true</useStandardDocletOptions>
-          <docencoding>UTF-8</docencoding>
-          <encoding>UTF-8</encoding>
-          <charset>UTF-8</charset>
-          <locale>en_US</locale>
-          <author>true</author>
-          <version>true</version>
-          <keywords>true</keywords>
+          <links>
+            <link>https://docs.oracle.com/javase/8/docs/api/</link>
+            <link>https://docs.oracle.com/javase/8/docs/jdk/api/javadoc/doclet/</link>
+          </links>
           <breakiterator>true</breakiterator>
           <additionalparam>
-            -link http://java.sun.com/javase/6/docs/api/
             -sourceclasspath ${project.build.outputDirectory}
-            -category default:$00FF5d:$40E0D0
-            -category aCategory:$fdc298:$ff6347
-            -category bCategory:$d082fe
-            -category testColor:skyblue2:royalblue3
           </additionalparam>
         </configuration>
-        <reportSets>
-          <reportSet>
-            <id>html</id>
-            <reports>
-              <report>javadoc</report>
-            </reports>
-          </reportSet>
-          <reportSet>
-            <id>test-html</id>
-            <reports>
-              <report>test-javadoc</report>
-            </reports>
-          </reportSet>
-        </reportSets>
       </plugin>
     </plugins>
   </reporting>
