--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
     </license>
   </licenses>
 
+  <prerequisites>
+    <maven>3.0.0</maven>
+  </prerequisites>
+
   <scm>
     <connection>scm:svn:http://anonsvn.jboss.org/repos/apiviz/branches/1.3</connection>
     <developerConnection>scm:svn:https://svn.jboss.org/repos/apiviz/branches/1.3</developerConnection>
