--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>com.grahamedgecombe.apiviz</groupId>
   <artifactId>apiviz</artifactId>
-  <version>1.3.3.GA-SNAPSHOT</version>
+  <version>1.3.3-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>APIviz</name>
