--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.grahamedgecombe.apiviz</groupId>
   <artifactId>apiviz</artifactId>
-  <version>1.3.4</version>
+  <version>1.3.5-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>APIviz</name>
