--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.3</version>
+        <version>3.0.0</version>
         <configuration>
           <doclet>org.jboss.apiviz.APIviz</doclet>
           <docletArtifact>
@@ -105,9 +105,9 @@
             <link>https://docs.oracle.com/javase/8/docs/jdk/api/javadoc/doclet/</link>
           </links>
           <breakiterator>true</breakiterator>
-          <additionalparam>
+          <additionalOptions>
             -sourceclasspath ${project.build.outputDirectory}
-          </additionalparam>
+          </additionalOptions>
         </configuration>
       </plugin>
     </plugins>
